--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
   },
   "homepage": "https://github.com/raphamorim/OffWebReader#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.9.2"
   }
 }
