--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "weboffreader",
+  "version": "0.0.1",
   "devDependencies": {
     "apache-server-configs": "^2.7.1",
     "babel-core": "^6.0.15",
