--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "devDependencies": {
     "apache-server-configs": "^2.7.1",
-    "babel-core": "^6.0.15",
-    "babel-preset-es2015": "^6.0.15",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "browser-sync": "^2.9.0",
     "del": "^2.0.2",
     "eslint-config-google": "^0.4.0",
@@ -29,7 +31,8 @@
     "psi": "^2.0.2",
     "run-sequence": "^1.0.1",
     "sw-precache": "^3.0.0",
-    "sw-toolbox": "^3.0.1"
+    "sw-toolbox": "^3.0.1",
+    "webpack-stream": "^3.2.0"
   },
   "engines": {
     "node": ">=0.12"
